[package]
name = "transfer"
version = "1.0.0"
edition = "2021"
authors = ["Jakkoble <business@jakkoble.de>"]
description = "A simple file transfer tool designed for WSL2 (from WSL2 to Windows)"
license = "MIT"
repository = "https://github.com/Jakkoble/transfer/"
readme = "README.md"

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
